minimal contents reviewed

--- a/index.html
+++ b/index.html
@@ -48,15 +48,20 @@
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="join.html">Join Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
               </li>
             </ul>
           </li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="internship.html">Internship</a></li>
-          <li><a href="contact.html">Donate</a></li>
+          <li class="dropdown"><a><span>Our Edtech Solutions</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="" target="_blank">Digital Literacy Plan</a></li>
+              <li><a href="" target="_blank">House Finder</a></li>
+              <li><a href="" target="_blank">Bike Finder</a></li>
+              <li><a href="" target="_blank">Market Place</a></li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Support Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
@@ -64,7 +69,7 @@
       <div class="header-social-links d-flex">
         <a href="https://twitter.com/hachstacks" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://facebook.com/hachstacks" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://linkedin.com/in/hachstacks" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://wa.me/+2348156841952" target="_blank" class="linkedin"><i class="bx bxl-whatsapp"></i></a>
       </div>
 
     </div>
@@ -87,7 +92,7 @@
                 premium courses, job offers, etc. HachStacks will HELP all interested
                 individuals grow.
                 </p>
-              <div><a href="brochure.html" class="btn-get-started" target="_blank">Read More</a></div>
+              <div><a href="https://www.fb.com/hachstacks" class="btn-get-started" target="_blank">See our activities</a></div>
             </div>
           </div>
         </div>
@@ -132,7 +137,7 @@
               <li><i class="ri-check-double-line"></i> <b>GROW</b> into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              <b>Join this amazing community today! </b>Send a DM to any of our social media handles and <a href="join.html" class="btn-get-started" >fill this form here</a>
+              <b>Join this amazing community today! </b>Send a DM to any of our social media handles and <a href="https://wa.me/+2348156841952" class="btn-get-started" >join our whatsapp group here</a>
             </p>
           </div>
         </div>
@@ -194,69 +199,6 @@
         </section>
       <!--section end-->
       </div>
-
-   <!-- ======= Our Clients Section ======= -->
-    <section id="clients" class="clients">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Sponsors</h2>
-        </div>
-
-        <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-1.svg" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-3.svg" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-4.svg" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-5.svg" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-6.svg" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-8.svg" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-2.svg" class="img-fluid" alt="">
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Our Clients Section -->
   
   </main><!-- End #main -->
 
@@ -267,7 +209,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact footer-links">
+          <div class="col-lg-4 col-md-6 footer-contact footer-links">
             <h3>HachStacks</h3>
             <p>
               Akwa Ibom State University<br><br>
@@ -281,35 +223,27 @@
           </div>
           
 
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
-            </ul>
-          </div>
+          <div class="col-lg-4 col-md-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
+          </ul>
+        </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Stay updated with our events and other activities!</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
+          </ul>
+        </div>
 
         </div>
       </div>
