--- a/about.html
+++ b/about.html
@@ -44,19 +44,24 @@
         <ul>
           <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="join.html">Join Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
               </li>
             </ul>
           </li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="internship.html">Internship</a></li>
-          <li><a href="contact.html">Donate</a></li>
+          <li class="dropdown"><a><span>Our Edtech Solutions</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="" target="_blank">Digital Literacy Plan</a></li>
+              <li><a href="" target="_blank">House Finder</a></li>
+              <li><a href="" target="_blank">Bike Finder</a></li>
+              <li><a href="" target="_blank">Market Place</a></li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Support Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
@@ -64,7 +69,7 @@
       <div class="header-social-links d-flex">
         <a href="https://twitter.com/hachstacks" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://facebook.com/hachstacks" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://linkedin.com/in/hachstacks" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://wa.me/+2348156841952" target="_blank" class="linkedin"><i class="bx bxl-whatsapp"></i></a>
       </div>
 
     </div>
@@ -115,7 +120,7 @@
               <li><i class="ri-check-double-line"></i> <b>GROW</b> into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              <b>Join this amazing community today! </b>Send a DM to any of our social media handles and <a href="join.html" class="btn-get-started" >fill this form here</a>
+              <b>Join this amazing community today! </b>Send a DM to any of our social media handles and <a href="https://wa.me/+2348156841952" class="btn-get-started" >join our whatsapp group here</a>
             </p>
           </div>
         </div>
@@ -141,12 +146,12 @@
 
         <div class="row">
  
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="https://twitter.com/unomieta"><i class="bx bxl-twitter"></i></a>
+                  <a href="https://twitter.com/unomieta_"><i class="bx bxl-twitter"></i></a>
                   <a href="https://facebook.com/joe.unomieta"><i class="bx bxl-facebook"></i></a>
                   <a href="https://github.com/RomeoChris"><i class="bx bxl-github"></i></a>
                   <a href="https://linkedin.com/in/joseph-unomieta"><i class="bx bxl-linkedin"></i></a>
@@ -160,7 +165,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
@@ -178,7 +183,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
@@ -194,7 +199,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
@@ -212,22 +217,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://www.facebook.com/ekemlnl.ekemlnludoh"><i class="bx bxl-facebook"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Ekemini Udoh</h4>
-                <span>Blockchain Analyst</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
@@ -243,7 +233,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-7.jpg" class="img-fluid" alt="">
@@ -260,20 +250,6 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-8.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="https://twitter.com/TechviberNG"><i class="bx bxl-twitter"></i></a>
-                  <a href="https://github.com/simeon4real"><i class="bx bxl-github"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Simeon Udoh</h4>
-                <span>Frontend Engineer</span>
-              </div>
-            </div>
           </div>
 
         </div>
@@ -353,7 +329,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact footer-links">
+          <div class="col-lg-4 col-md-6 footer-contact footer-links">
             <h3>HachStacks</h3>
             <p>
               Akwa Ibom State University<br><br>
@@ -367,35 +343,27 @@
           </div>
           
 
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
-            </ul>
-          </div>
+          <div class="col-lg-4 col-md-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
+          </ul>
+        </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Stay updated with our events and other activities!</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
+          </ul>
+        </div>
 
         </div>
       </div>
