Sponsors removed and minimal implemented

--- a/support.html
+++ b/support.html
@@ -59,7 +59,7 @@
               <li><a href="#">Market Place</a></li>
             </ul>
           </li>
-          <li><a href="support.html">Support Us</a></li>
+          <li><a href="support.html" class="active">Support Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
@@ -80,112 +80,50 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>FAQs</h2>
+          <h2>Thank you for your kind support to the Tech Community!</h2>
         </div>
 
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= Frequently Asked Questions Section ======= -->
-    <section id="faq" class="faq section-bg">
-      <div class="container" data-aos="fade-up">
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container">
 
-        <div class="section-title">
-          <h2>Frequently Asked Questions</h2>
-        </div>
+        <div class="row justify-content-center" data-aos="fade-up">
 
-        <div class="faq-list">
-          <ul>
-            <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">What is HachStacks about? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
-                <p>
-                  HachStacks provides a platform and a searchlight for identifying tech-oriented minds with burning passion in learning more, 
-                                    nurture them by providing resources necessary for their growth, 
-                                    encourage and mentor through regular meetups and events, 
-                                    access to carefully selected patrons and resource persons.
-                </p>
+          <div class="col-lg-10">
+
+            <div class="info-wrap">
+              <div class="row">
+                <div class="col-lg-4 info">
+                  <i class="bi bi-bank"></i>
+                  <h4>Account Details:</h4>
+                  <p>Account Number: <b>2024911401</b><br>
+                  Bank Name: <b>KUDA MFB<br>Please <a href="https://wa.me/+2348156841952">call</a> to confirm</b></p>
+                </div>
+
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <i class="bi bi-envelope"></i>
+                  <h4>Email:</h4>
+                  <p><a href="mailto:hello@hachstacks.com">hello@hachstacks.com</a></p>
+                  <p><a href="mailto:team@hachstacks.com">team@hachstacks.com</a></p>
+                </div>
+
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <i class="bi bi-phone"></i>
+                  <h4>Whatsapp & Calls:</h4>
+                  <p><a href="https://wa.me/+2348156841952">+234 815 684 1952</a></p>
+                </div>
               </div>
-            </li>
+            </div>
 
-            <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">What are the benefits of joining HachStacks Community? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  1. Access to premium resources.<br> 2. 24/7 access to community mentoring. <br> 3. Real time solutions to problems.
-                                <br> 4. Job offers and opportunities.
-                </p>
-              </div>
-            </li>
+          </div>
 
-            <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Can i donate to the community or sponsor an event? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Yes, We absolutely love that. To donate to the community or sponsor any of our event, please click the button below <br><br> <a href="support.html" style="text-align: center;">Support</a>. 
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">How can i join the Community? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  1. Go to "Contact Page" and send a DM or mail <br> 2. Like and follow all the community online platforms
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed"> Is HachStacks limited to Akwa Ibom State University students? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  No! HachStacks is open to membership to all interested individuals.
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="collapsed">I dont have knowledge of any digital skill, can i join? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Yes, you can but you must have a laptop and other necessary tools for learning in your chosen field. 
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-7" class="collapsed">I am a member of another Tech Community, Can i still join? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Yes, you can. 
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-8" class="collapsed">Will there be physical meetups? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Yes, there will be physical meetups. 
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-9" class="collapsed">I have more questions! Whom do i contact? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-9" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Go to "Contact Us" page and send a DM to us. Alternatively, send a DM to any of our Social media handles.
-                </p>
-              </div>
-            </li>
-
-          </ul>
         </div>
 
       </div>
-    </section><!-- End Frequently Asked Questions Section -->
+    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
