--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
     <div class="container d-flex align-items-center">
 
       <h1 class="logo logo-mobile me-auto"><a href="index.html"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -55,13 +53,13 @@
           </li>
           <li class="dropdown"><a><span>Our Edtech Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="" target="_blank">Digital Literacy Plan</a></li>
-              <li><a href="" target="_blank">House Finder</a></li>
-              <li><a href="" target="_blank">Bike Finder</a></li>
-              <li><a href="" target="_blank">Market Place</a></li>
+              <li><a href="#">Digital Literacy Plan</a></li>
+              <li><a href="https://hhf.netlify.app" target="_blank">House Finder</a></li>
+              <li><a href="#">Bike Finder</a></li>
+              <li><a href="#">Market Place</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Support Us</a></li>
+          <li><a href="support.html">Support Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
@@ -137,7 +135,7 @@
               <li><i class="ri-check-double-line"></i> <b>GROW</b> into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              <b>Join this amazing community today! </b>Send a DM to any of our social media handles and <a href="https://wa.me/+2348156841952" class="btn-get-started" >join our whatsapp group here</a>
+              <b>Join this amazing community today! </b>Send a DM to <a href="https://wa.me/+2348156841952" class="btn-get-started" >join our whatsapp group here</a>
             </p>
           </div>
         </div>
@@ -218,7 +216,6 @@
               <a href="https://wa.me/+2348156841952" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
               <a href="https://twitter.com/hachstacks" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
               <a href="https://facebook.com/hachstacks" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-              <a href="https://linkedin.com/in/hachstacks" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
           
@@ -227,10 +224,10 @@
           <h4>Useful Links</h4>
           <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="https://hhf.netlify.app" target="_blank">House Finder</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Bike Finder</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="support.html">Sponsorship / Donations</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
           </ul>
         </div>
 
