--- a/portfolio.html
+++ b/portfolio.html
@@ -37,26 +37,29 @@
     <div class="container d-flex align-items-center">
 
       <h1 class="logo logo-mobile me-auto"><a href="index.html"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html" >Home</a></li>
+          <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="join.html">Join Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
               </li>
             </ul>
           </li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="internship.html">Internship</a></li>
-          <li><a href="contact.html">Donate</a></li>
+          <li class="dropdown"><a><span>Our Edtech Solutions</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Digital Literacy Plan</a></li>
+              <li><a href="https://hhf.netlify.app" target="_blank">House Finder</a></li>
+              <li><a href="#">Bike Finder</a></li>
+              <li><a href="#">Market Place</a></li>
+            </ul>
+          </li>
+          <li><a href="support.html">Support Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
@@ -64,7 +67,7 @@
       <div class="header-social-links d-flex">
         <a href="https://twitter.com/hachstacks" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://facebook.com/hachstacks" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://linkedin.com/in/hachstacks" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://wa.me/+2348156841952" target="_blank" class="linkedin"><i class="bx bxl-whatsapp"></i></a>
       </div>
 
     </div>
@@ -247,7 +250,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-3 col-md-6 footer-contact footer-links">
+        <div class="col-lg-4 col-md-6 footer-contact footer-links">
           <h3>HachStacks</h3>
           <p>
             Akwa Ibom State University<br><br>
@@ -256,40 +259,31 @@
             <a href="https://wa.me/+2348156841952" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
             <a href="https://twitter.com/hachstacks" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
             <a href="https://facebook.com/hachstacks" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-            <a href="https://linkedin.com/in/hachstacks" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           </div>
         </div>
         
 
-        <div class="col-lg-2 col-md-6 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
-          </ul>
-        </div>
+        <div class="col-lg-4 col-md-6 footer-links">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="https://hhf.netlify.app" target="_blank">House Finder</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="#">Bike Finder</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="support.html">Sponsorship / Donations</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
+        </ul>
+      </div>
 
-        <div class="col-lg-3 col-md-6 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>Join Our Newsletter</h4>
-          <p>Stay updated with our events and other activities!</p>
-          <form action="" method="post">
-            <input type="email" name="email"><input type="submit" value="Subscribe">
-          </form>
-        </div>
+      <div class="col-lg-3 col-md-6 footer-links">
+        <h4>Our Services</h4>
+        <ul>
+          <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
+        </ul>
+      </div>
 
       </div>
     </div>
