call button updated

--- a/support.html
+++ b/support.html
@@ -100,7 +100,7 @@
                   <i class="bi bi-bank"></i>
                   <h4>Account Details:</h4>
                   <p>Account Number: <b>2024911401</b><br>
-                  Bank Name: <b>KUDA MFB<br>Please <a href="https://wa.me/+2348156841952">call</a> to confirm</b></p>
+                  Bank Name: <b>KUDA MFB<br>Please <a href="tel:+2348156841952">call</a> to confirm</b></p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
