--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <li class="dropdown"><a><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about">About Us</a></li>
+              <li><a href="/about">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
