chat plugin added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <!-- Chat plugin : messenger -->
+  <!-- CHat plugin -->
   <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
