portfolio page updated

--- a/portfolio.html
+++ b/portfolio.html
@@ -155,25 +155,11 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item *">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Precious Uwak</h4>
-              <p>Content Writer</p>
-              <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
             <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Christopher Emediong</h4>
-              <p>Android Mobile Developer</p>
+              <p>Mobile Developer</p>
               <div class="social">
                 <a href="https://twitter.com/chris_priority"><i class="bx bxl-twitter"></i></a>
                 <a href="https://facebook.com/chris.eminence.3"><i class="bx bxl-facebook"></i></a>
@@ -200,7 +186,7 @@
             <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Chris Ekong</h4>
-              <p>Android Mobile Developer</p>
+              <p>Mobile Developer</p>
               <div class="social">
                 <a href="https://facebook.com/profile.php?id=100022086265883"><i class="bx bxl-facebook"></i></a>
                 <a href="https://github.com/Ekong05"><i class="bx bxl-github"></i></a>
@@ -225,18 +211,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-12.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
+            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Bright Emmanuel</h4>
-              <p>Graphic Designer</p>
+              <h4>Uduak Genesis</h4>
+              <p>Digital Marketer</p>
               <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
+                <a href="https://facebook.com/uduak.genesis"><i class="bx bxl-facebook"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
@@ -244,7 +227,7 @@
             <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Emmanuel Jackson</h4>
-              <p>Web Developer</p>
+              <p>Graphic Designer</p>
               <div class="social">
                 <a href=""><i class="bx bxl-twitter"></i></a>
                 <a href=""><i class="bx bxl-facebook"></i></a>
@@ -267,6 +250,109 @@
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
               <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
+            <img src="assets/img/portfolio/portfolio-16.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Joy Udotong</h4>
+              <p>Digital Marketer</p>
+              <div class="social">
+                <a href="https://www.linkedin.com/in/joy-udotong"><i class="bx bxl-linkedin"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-16.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-17.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Mgbemele IkeChukwu</h4>
+              <p>Reactjs Developer</p>
+              <div class="social">
+                <a href="https://twitter.com/ikaaytech"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.facebook.com/Itz.Ikaay"><i class="bx bxl-facebook"></i></a>
+                <a href="https://github.com/Ikaay1"><i class="bx bxl-github"></i></a>
+                <a href="https://www.linkedin.com/in/ikechukwu-mgbemele-716696230"><i class="bx bxl-linkedin"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-17.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <img src="assets/img/portfolio/portfolio-18.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Utibeabasi Umoren</h4>
+              <p>Product Designer</p>
+              <div class="social">
+                <a href="https://twitter.com/Yhuteemoren"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/utibeabasi-umoren"><i class="bx bxl-linkedin"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-18.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Emem Ekong</h4>
+              <p>PHP/Laravel Developer</p>
+              <div class="social">
+                <a href="https://twitter.com/airmyekong"><i class="bx bxl-twitter"></i></a>
+                <a href="https://github.com/Ememekong001"><i class="bx bxl-github"></i></a>
+                <a href="https://linkedin.com/in/emem-ekong-254985240"><i class="bx bxl-linkedin"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Tope Agbaje</h4>
+              <p>NodeJS Developer</p>
+              <div class="social">
+                <a href="https://twitter.com/ag_tope"><i class="bx bxl-twitter"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Abasiediomo Peter</h4>
+              <p>Graphic Designer</p>
+              <div class="social">
+                <a href="https://facebook.com/imo.peter.7967"><i class="bx bxl-facebook"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Daramfon Ukpong</h4>
+              <p>Reactjs Developer</p>
+              <div class="social">
+                <a href="https://twitter.com/darathedev"><i class="bx bxl-twitter"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-managers">
+            <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Bassey Anse</h4>
+              <p>Project Manager</p>
+              <div class="social">
+                <a href="https://twitter.com/MhistaFresh"><i class="bx bxl-twitter"></i></a>
+                <a href="https://facebook.com/profile.php?id=100074063259282><i class="bx bxl-facebook"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""></i></a>
             </div>
           </div>
 
