--- a/portfolio.html
+++ b/portfolio.html
@@ -356,6 +356,18 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <img src="assets/img/portfolio/portfolio-12.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Okon Sunday</h4>
+              <p>Graphic Designer</p>
+              <div class="social">
+                <a href="https://web.facebook.com/isunnyboy"><i class="bx bxl-facebook"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
       </div>
     </section><!-- End Portfolio Section -->
 
