--- a/support.html
+++ b/support.html
@@ -70,11 +70,11 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo logo-mobile me-auto"><a href="index.html"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
+      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
 
           <li class="dropdown"><a><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
