porfolio page updated

--- a/portfolio.html
+++ b/portfolio.html
@@ -360,11 +360,24 @@
             <img src="assets/img/portfolio/portfolio-12.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Okon Sunday</h4>
-              <p>Graphic Designer</p>
+              <p>Product Designer</p>
               <div class="social">
                 <a href="https://web.facebook.com/isunnyboy"><i class="bx bxl-facebook"></i></a>
               </div>
               <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
+            <img src="assets/img/portfolio/portfolio-13.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Emem Ukpong</h4>
+              <p>Digital Marketer | SEO Content Developer</p>
+              <div class="social">
+                <a href="https://twitter.com/emmukpong"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/-ememukpong"><i class="bx bxl-linkedin"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
