--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>HachStacks Tech Community</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="A tech community in Nigeria" name="description">
+  <meta content="Tech community, Tech, AKSU, Tech community in Nigeria Akwa Ibom Uyo" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -87,6 +87,8 @@
           <li class="dropdown"><a><span>Our Edtech Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Digital Literacy Plan</a></li>
+              <li><a href="#">GATS Internship</a></li>
+              <li><a href="#">AKSU Social App</a></li>
               <li><a href="https://hhf.netlify.app" target="_blank">House Finder</a></li>
               <li><a href="#">Bike Finder</a></li>
               <li><a href="#">Market Place</a></li>
@@ -125,7 +127,7 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right" style="text-align: justify;">
-            <h3><strong style="color: purple;">Get to know us!</strong></h3>
+            <h3><strong style="color: #411472;">Get to know us!</strong></h3>
             <p>“Tech communities is much more than belonging to something; it is about
               doing something together that makes belonging matter” ~ Brian Solis. <br> <br>
               These communities are driven by a group of people with a shared code of
@@ -136,7 +138,7 @@
               through regular meetups and events, access to carefully selected patrons and
               resource persons. <br> <br>
               <strong>“When you see someone as involved in the process as you are, it results in an
-              intense drive and motivation”</strong> ~ <span style="color: purple;"><b>HachStacks</b></span>
+              intense drive and motivation”</strong> ~ <span style="color: #411472;"><b>HachStacks</b></span>
               </p>
               <div class="text-right"></div>
           </div>
@@ -151,7 +153,7 @@
               <li><i class="ri-check-double-line"></i> <b>GROW</b> into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              <b>Join this amazing community today! </b>Send a DM to <a href="https://wa.me/+2348156841952" class="btn-get-started" >join our whatsapp group here</a>
+              <a href="https://bit.ly/hachstacks" class="btn-get-started" > <b>Register to join this amazing community today! </b> </a>
             </p>
           </div>
         </div>
