--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>HachStacks Tech Community</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="A tech community in Nigeria" name="description">
+  <meta content="Tech community, Tech, AKSU, Tech community in Nigeria Akwa Ibom Uyo" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -88,6 +88,8 @@
           <li class="dropdown"><a><span>Our Edtech Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Digital Literacy Plan</a></li>
+              <li><a href="#">GATS Internship</a></li>
+              <li><a href="#">AKSU Social App</a></li>
               <li><a href="https://hhf.netlify.app" target="_blank">House Finder</a></li>
               <li><a href="#">Bike Finder</a></li>
               <li><a href="#">Market Place</a></li>
