changes reverted... index refixed

--- a/about.html
+++ b/about.html
@@ -79,19 +79,20 @@
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="https://fb.com/hachstacks">Our Activities</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
               </li>
             </ul>
           </li>
-          <li class="dropdown"><a><span>Our Edtech Solutions</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a><span>Our Proferred Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Digital Literacy Plan</a></li>
-              <li><a href="#">GATS Internship</a></li>
               <li><a href="#">AKSU Social App</a></li>
+              <li><a href="#">GATS Internship</a></li>
               <li><a href="https://hhf.netlify.app" target="_blank">House Finder</a></li>
-              <li><a href="#">Bike Finder</a></li>
               <li><a href="#">Market Place</a></li>
+              <li><a href="#">Bike Finder</a></li>
             </ul>
           </li>
           <li><a href="support.html">Support Us</a></li>
