--- a/index.html
+++ b/index.html
@@ -46,17 +46,20 @@
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="https://fb.com/hachstacks">Our Activities</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
               </li>
             </ul>
           </li>
-          <li class="dropdown"><a><span>Our Edtech Solutions</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a><span>Our Proferred Solutions</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Digital Literacy Plan</a></li>
+              <li><a href="#">AKSU Social App</a></li>
+              <li><a href="#">GATS Internship</a></li>
               <li><a href="https://hhf.netlify.app" target="_blank">House Finder</a></li>
-              <li><a href="#">Bike Finder</a></li>
               <li><a href="#">Market Place</a></li>
+              <li><a href="#">Bike Finder</a></li>
             </ul>
           </li>
           <li><a href="support.html">Support Us</a></li>
@@ -90,7 +93,7 @@
                 premium courses, job offers, etc. HachStacks will HELP all interested
                 individuals grow.
                 </p>
-              <div><a href="https://www.fb.com/hachstacks" class="btn-get-started" target="_blank">See our activities</a></div>
+              <div><a href="https://www.fb.com/hachstacks" class="btn-get-started" target="_blank">See our activities >></a></div>
             </div>
           </div>
         </div>
@@ -109,7 +112,7 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right" style="text-align: justify;">
-            <h3><strong style="color: purple;">Get to know us!</strong></h3>
+            <h3><strong style="color: #411472;">Get to know us!</strong></h3>
             <p>“Tech communities is much more than belonging to something; it is about
               doing something together that makes belonging matter” ~ Brian Solis. <br> <br>
               These communities are driven by a group of people with a shared code of
@@ -120,7 +123,7 @@
               through regular meetups and events, access to carefully selected patrons and
               resource persons. <br> <br>
               <strong>“When you see someone as involved in the process as you are, it results in an
-              intense drive and motivation”</strong> ~ <span style="color: purple;"><b>HachStacks</b></span>
+              intense drive and motivation”</strong> ~ <span style="color: #411472;"><b>HachStacks</b></span>
               </p>
               <div class="text-right"></div>
           </div>
