more portfolio profiles added

--- a/index.html
+++ b/index.html
@@ -104,12 +104,11 @@
     </div>
   </section><!-- End Hero -->
 
-  <main id="main">
+  <main id="main" class="main">
 
     <!-- ======= About Us Section ======= -->
     <section id="about-us" class="about-us">
       <div class="container" data-aos="fade-up">
-
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right" style="text-align: justify;">
             <h3><strong style="color: #411472;">Get to know us!</strong></h3>
