--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
     </div>
   </header><!-- End Header -->
 
-  <main id="main">
+  <main id="main" class="main">
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
@@ -131,12 +131,11 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All Stacks</li>
-              <li data-filter=".filter-web">Web Devs</li>
-              <li data-filter=".filter-mobile">Mobile Devs</li>
+              <li data-filter=".filter-web">Web Developers</li>
+              <li data-filter=".filter-mobile">Mobile Developers</li>
               <li data-filter=".filter-design">Designers</li>
               <li data-filter=".filter-managers">Project Managers</li>
               <li data-filter=".filter-digimart">Digital Marketers</li>
-              <li data-filter=".filter-games">Game Devs</li>
             </ul>
           </div>
         </div>
@@ -147,7 +146,7 @@
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Joseph Unomieta</h4>
-              <p>Web Developer | Project Manager</p>
+              <p>Software Engineer | Project Manager</p>
               <div class="social">
                 <a href="https://twitter.com/unomieta"><i class="bx bxl-twitter"></i></a>
                 <a href="https://facebook.com/joe.unomieta"><i class="bx bxl-facebook"></i></a>
@@ -232,10 +231,7 @@
               <h4>Emmanuel Jackson</h4>
               <p>Graphic Designer</p>
               <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
+                <a href="https://facebook.com/slazenger.jackson"><i class="bx bxl-facebook"></i></a>
               </div>
               <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
@@ -247,10 +243,7 @@
               <h4>Frank Udoh</h4>
               <p>Web Developer</p>
               <div class="social">
-                <a href=""><i class="bx bxl-twitter"></i></a>
-                <a href=""><i class="bx bxl-facebook"></i></a>
-                <a href=""><i class="bx bxl-behance"></i></a>
-                <a href=""><i class="bx bxl-linkedin"></i></a>
+                
               </div>
               <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
@@ -338,9 +331,11 @@
             <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Daramfon Ukpong</h4>
-              <p>Reactjs Developer</p>
+              <p>Software Engineer</p>
               <div class="social">
                 <a href="https://twitter.com/darathedev"><i class="bx bxl-twitter"></i></a>
+                <a href="https://github.com/daraukpong"><i class="bx bxl-github"></i></a>
+                <a href="https://ng.linkedin.com/in/daramfon-ukpong-bb2a31201"><i class="bx bxl-linkedin"></i></a>
               </div>
               <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
@@ -353,7 +348,7 @@
               <p>Project Manager</p>
               <div class="social">
                 <a href="https://twitter.com/MhistaFresh"><i class="bx bxl-twitter"></i></a>
-                <a href="https://facebook.com/profile.php?id=100074063259282><i class="bx bxl-facebook"></i></a>
+                <a href="https://facebook.com/profile.php?id=100074063259282"><i class="bx bxl-facebook"></i></a>
               </div>
               <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""></i></a>
             </div>
@@ -381,6 +376,18 @@
                 <a href="https://www.linkedin.com/in/-ememukpong"><i class="bx bxl-linkedin"></i></a>
               </div>
               <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-20.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Blessing Udoh</h4>
+              <p>Web Developer</p>
+              <div class="social">
+                <a href="https://facebook.com/profile.php?id=100073742652803"><i class="bx bxl-facebook"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-20.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
