--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
     </div>
   </header><!-- End Header -->
 
-  <main id="main">
+  <main id="main" class="main">
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
